// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`address route > enhanced data 1`] = `
{
  "canonical": undefined,
  "description": "View the account balance, transactions, and other data for duck.eth on the Blockscout (Blockscout) Explorer",
  "jsonLd": undefined,
  "opengraph": {
    "description": undefined,
    "imageUrl": undefined,
    "title": "Blockscout address details for duck.eth | Blockscout",
  },
  "title": "Blockscout address details for duck.eth | Blockscout",
}
`;

exports[`address route > no enhanced data 1`] = `
{
  "canonical": undefined,
  "description": "View the account balance, transactions, and more for 0xd789a607CEac2f0E14867de4EB15b15C9FFB5859 on Blockscout.",
  "jsonLd": undefined,
  "opengraph": {
    "description": undefined,
    "imageUrl": undefined,
    "title": "Blockscout address details for 0xd789a607CEac2f0E14867de4EB15b15C9FFB5859 | Blockscout",
  },
  "title": "Blockscout address details for 0xd789a607CEac2f0E14867de4EB15b15C9FFB5859 | Blockscout",
}
`;

exports[`dynamic route 1`] = `
{
  "canonical": undefined,
  "description": "Blockscout detailed transaction info. View transaction status, block confirmation, gas fee, native coin and token transfers.",
  "jsonLd": undefined,
  "opengraph": {
    "description": undefined,
    "imageUrl": undefined,
    "title": "Blockscout transaction 0x62d597ebcf3e8d60096dd0363bc2f0f5e2df27ba1dacd696c51aa7c9409f3193 | Blockscout",
  },
  "title": "Blockscout transaction 0x62d597ebcf3e8d60096dd0363bc2f0f5e2df27ba1dacd696c51aa7c9409f3193 | Blockscout",
}
`;

exports[`static route 1`] = `
{
  "canonical": "http://localhost:3000/txs",
  "description": "Browse Blockscout transactions. Track transaction status, fees, and details in real time.",
  "jsonLd": undefined,
  "opengraph": {
    "description": "",
    "imageUrl": "http://localhost:3000/static/og_image.png",
    "title": "Blockscout transactions - Blockscout explorer | Blockscout",
  },
  "title": "Blockscout transactions - Blockscout explorer | Blockscout",
}
`;

exports[`stats details route > enhanced data 1`] = `
{
  "canonical": undefined,
  "description": "Cumulative account growth over time",
  "jsonLd": undefined,
  "opengraph": {
    "description": undefined,
    "imageUrl": undefined,
    "title": "Number of accounts chart on Blockscout | Blockscout",
  },
  "title": "Number of accounts chart on Blockscout | Blockscout",
}
`;

exports[`stats details route > no enhanced data 1`] = `
{
  "canonical": undefined,
  "description": "Explore the accountsGrowth chart on Blockscout.",
  "jsonLd": undefined,
  "opengraph": {
    "description": undefined,
    "imageUrl": undefined,
    "title": "Blockscout stats - Accounts growth chart | Blockscout",
  },
  "title": "Blockscout stats - Accounts growth chart | Blockscout",
}
`;
